feat(staging): pre-staging security, optimistic locking, composite constraints, and full test suite